コミットメッセージ

--- a/Downloads/Dai22_kai/Dai22_kai/build.gradle
+++ b/Downloads/Dai22_kai/Dai22_kai/build.gradle
@@ -4,36 +4,36 @@ plugins {
 	id 'org.springframework.boot' version '3.3.3'
 	id 'io.spring.dependency-management' version '1.1.6'
 }
+
 group = 'raisetech'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = (21)
-	}
+	sourceCompatibility = "21"
+	targetCompatibility = "21"
+}
+
 repositories {
 	mavenCentral()
 }
+
 dependencies {
-	//Spring Boot
+	// Spring Boot
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	// Thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	// 便利機能,ユーティリティ
 	implementation 'org.apache.commons:commons-lang3:3.14.0'
-    // Lombok
+	// Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
-
 	// MySQLドライバ
 	runtimeOnly 'com.mysql:mysql-connector-j'
-	//MyBatis
+	// MyBatis
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-
-
 }
 
 tasks.named('test') {
