--- a/Downloads/Dai22_kai/Dai22_kai/src/main/resources/application.properties
+++ b/Downloads/Dai22_kai/Dai22_kai/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=Dai22_kai
+spring.application.name=Dai_22kai
 
 spring.datasource.url=jdbc:mysql://localhost:3308/Dai22_kai
-spring.datasource.username=root
+spring.datasource.username=root@localhost
 spring.datasource.password=rootroot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
